2003-06-10  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/protocol.py: connection refused errors for
	connected datagram protocols (connectUDP) are indicated using
	callback, ConnectedDatagramProtocol.connectionRefused, rather
	than an exception as before.

2003-06-09  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/trial/{unittest,runner}.py: Added setUpClass and
	tearDownClass methods and invocations to twisted.trial. Implement
	those methods in your TestCases if you want to manage resources on
	a per-class level.
 
2003-06-09  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/mail/relay.py: Default relaying rule change from all
	local and all non-INET connections to all local and all UNIX
	connections.

2003-06-08  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/interfaces.py: Added ITLSTransport interface,
	subclassing ITCPTransport and adding one method - startTLS()

	* twisted/internet/tcp.py: Connector class made to implement
	ITLSTransport if TLS is available.

2003-06-05  Brian Warner  <warner@lothar.com>

	* twisted/conch/ssh/transport.py (ssh_KEX_DH_GEX_INIT): don't use
	small values for DH parameter 'y'. openssh rejects these because they
	make it trivial to reconstruct the shared secret. This caused a test
	failure about 1024 times out of every 65536.

	* twisted/test/test_dirdbm.py (DirDbmTestCase.testModificationTime):
	dodge a kernel bug that lets mtime get skewed from time(), causing
	an occasional test failure

2003-06-03  Jp Calderone    <exarkun@twistedmatrix.com>

	* twisted/__init__.py twisted/internet/app.py
	* twisted/internet/unix.py twisted/internet/tcp.py
	* twisted/manhole/ui/gtk2manhole.py twisted/protocols/dns.py
	* twisted/protocols/smtp.py twisted/protocols/sux.py
	* twisted/protocols/imap4.py twisted/protocols/sip.py
	* twisted/protocols/htb.py twisted/protocols/pcp.py
	* twisted/python/formmethod.py twisted/python/reflect.py
	* twisted/python/util.py twisted/python/components.py