@@ -121,6 +121,7 @@ of the day</q> server.  Current code for the server is in
    <li><a href="coding-standard.html">Coding standard</a></li>
    <li><a href="doc-standard.html">Documentation standard</a></li>
    <li><a href="test-standard.html">Testing standard</a></li>
+   <li><a href="cvs-dev.html">Working from CVS</a></li>
    </ul>
 </li>
 
